# memfuse_mvp

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  sample.txt
db/: Dockerfile
db/init/: 010-schema.sql  020-structured-memory.sql  030-procedural-memory.sql  035-procedural-lessons.sql  040-api-schema.sql
demos/: README.md  comprehensive_demo.py  content_creation_demo.py  data_analysis_demo.py  demo_launcher.py  research_analysis_demo.py  start_demo_server.py  verify_demos.py
docs/: API_IMPLEMENTATION_SUMMARY.md  API_REFERENCE.md  FINAL_VALIDATION_REPORT.md  UNIFIED_API_SPECIFICATION.md  api_usage.md  jina_api.md  openai_api.md  overview.md  prd.md
memfuse/: api_db.py  api_server.py  cli.py  config.py  context.py  db.py  embeddings.py  indexer.py  llm.py  orchestrator.py  rag.py  retrieval.py  structured.py  tokenizer.py  tracing.py  utils.py
memfuse/api/: __init__.py  agents_api.py  messages_api.py  query_api.py  sessions_api.py  users_api.py
scripts/: e2e_phase3.py  e2e_phase4.py  start.sh  start_api_server.py  test_facts_recall.py  test_m2_dedup_contradiction.py  test_m2_extractor.py  validate_core_apis.py
tests/: final_validation.py  test_api.py  test_api_simple.py  test_context.py  test_embeddings.py  test_orchestrator.py  test_rag_pipeline.py  test_retrieval_fallback.py  test_session_indexer_flow.py  test_structured_memory.py
